fix: updated deps, changed hr color to make it more visible, fixed code copy issue

--- a/packages/nextra-theme-docs/css/code-block.css
+++ b/packages/nextra-theme-docs/css/code-block.css
@@ -3,7 +3,7 @@ code {
     font-feature-settings: "rlig" 1, "calt" 1, "ss01" 1;
 
     &[data-line-numbers] > .line {
-        @apply inline-flex pl-2;
+        @apply pl-2;
         &::before {
             counter-increment: line;
             content: counter(line);
